fix: margin on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -420,6 +420,12 @@ body {
         padding-bottom: 2rem;
     }
 
+    .py-8 {
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+    }
+
+
     .px-20 {
         padding-left: 2rem;
         padding-right: 2rem;
